--- a/index.html
+++ b/index.html
@@ -9,9 +9,27 @@
   <link href="https://fonts.googleapis.com/css?family=Roboto|Rubik" rel="stylesheet">
   <link rel="stylesheet" href="css/index.css">
 
-</head>
-
 <body>
+  </header id="home">
+    <nav>
+    <div class="logo">
+            <img src="img/lambda-black.png" alt="logo">
+    </div>
+    <div class="links">
+            <a href="#home">Home</a>
+            <a href="about.html">About</a>
+            <a href="#products">Products</a>
+            <a href="#blog">Blog</a>
+            <a href="#contatc">Contact</a>
+        </div>   
+        </nav>
+
+        <div class="top-image">
+        <img src="img/jumbo.jpg" alt="header image">
+        </div>
+    </div>
+   
+
     <div class="container">
    
         <section class="top-content">
@@ -30,16 +48,16 @@
             <h2>Why Did It Have To Be Boxes...</h2>
             
             <div class="boxes">
-                <div class="box">Box 1</div>
-                <div class="box">Box 2</div>
-                <div class="box">Box 3</div>
-                <div class="box">Box 4</div>
-                <div class="box">Box 5</div>
-                <div class="box">Box 6</div>
-                <div class="box">Box 7</div>
-                <div class="box">Box 8</div>
-                <div class="box">Box 9</div>
-                <div class="box">Box 10</div>
+                <div class="box" id="box1">Box 1</div>
+                <div class="box"id="box2">Box 2</div>
+                <div class="box"id="box3">Box 3</div>
+                <div class="box"id="box4">Box 4</div>
+                <div class="box"id="box5">Box 5</div>
+                <div class="box"id="box6">Box 6</div>
+                <div class="box"id="box7">Box 7</div>
+                <div class="box"id="box8">Box 8</div>
+                <div class="box"id="box9">Box 9</div>
+                <div class="box"id="box10">Box 10</div>
             </div>
         
         </section>
